# p1-the-physics-team

./: Basic Implementation.ipynb  Can I Vectorize.ipynb  LICENSE  README.md  pyproject.toml  test.ipynb
.github/autograding/: test-p2.py
.github/workflows/: classroom.yml
doc/: ideas.yaml  theory-Copy1.ipynb  theory.ipynb
src/: __init__.py  hmc.py  pdf.py
